# Egzamino-isankstin-uzduotis

./: CMakeLists.txt  README.md  main.cpp  mylib.cpp  mylib.h  tekstas.txt  tlds-alpha-by-domain.txt
